--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.classpath
+.project
 _site
 .sass-cache
 .jekyll-cache
@@ -7,3 +9,6 @@ Gemfile.lock
 vendor
 .scannerwork/
 .DS_Store
+rubygems
+/target/
+/.settings/
