--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>eu.cessda.cmv</groupId>
 	<artifactId>cmv-documentation</artifactId>
-	<version>0.3.2-SNAPSHOT</version>
+	<version>0.4.0-SNAPSHOT</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -108,15 +108,15 @@
 		</plugins>
 		<resources>
 			<resource>
-				<directory>${project.basedir}/_site/documentation/</directory>
+				<directory>${project.basedir}/target/site/apidocs/</directory>
 				<filtering>false</filtering>
-				<targetPath>${project.build.outputDirectory}/cmv-documentation</targetPath>
+				<targetPath>${project.basedir}/_site/documentation/api/javadoc</targetPath>
 				<includes><include>**/*</include></includes>
 			</resource>
 			<resource>
-				<directory>${project.basedir}/target/site/apidocs/</directory>
+				<directory>${project.basedir}/_site/documentation/</directory>
 				<filtering>false</filtering>
-				<targetPath>${project.build.outputDirectory}/cmv-documentation/api/javadoc</targetPath>
+				<targetPath>${project.build.outputDirectory}/cmv-documentation</targetPath>
 				<includes><include>**/*</include></includes>
 			</resource>
 		</resources>
