--- a/pom.xml
+++ b/pom.xml
@@ -153,8 +153,8 @@
 
 	<licenses>
 		<license>
-			<name>Apache License, Version 2.0</name>
-			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<name>Creative Commons Attribution 4.0 International Public License</name>
+			<url>https://creativecommons.org/licenses/by/4.0/</url>
 		</license>
 	</licenses>
 	<organization>
