--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,7 @@ trim_trailing_whitespace = true
 [*.md]
 indent_size = 2
 indent_style = space
+trim_trailing_whitespace = false
 
 [Jenkinsfile]
 indent_style = tab
