--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,8 @@ defaults:
 exclude:
  - .sass-cache/
  - .jekyll-cache/
- - Dockerfile
+ - jekyll.Dockerfile
+ - nginx.Dockerfile
  - Jenkinsfile
  - gemfiles/
  - Gemfile
@@ -43,8 +44,13 @@ exclude:
  - README.md
  - CONTRIBUTING.md
  - CONTRIBUTORS.md
+ - CODE_OF_CONDUCT.md
  - CHANGELOG.md
+ - CITATION.cff
  - LICENSE.txt
+ - mvnw
+ - mvnw.cmd
+ - pom.xml
  - vendor/bundle/
  - vendor/cache/
  - vendor/gems/
