pom -> add SCM connection information to the POM

--- a/pom.xml
+++ b/pom.xml
@@ -144,7 +144,8 @@
 		<url>https://www.cessda.eu/</url>
 	</organization>
 	<scm>
-		<url>https://github.com/cessda/cessda.cmv.documentation/</url>
+		<url>https://github.com/cessda/cessda.cmv.documentation</url>
+		<developerConnection>scm:git:https://github.com/cessda/cessda.cmv.documentation.git</developerConnection>
 	</scm>
 	<ciManagement>
 		<system>Jenkins</system>
