[maven-release-plugin] prepare release 1.1.0

--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>eu.cessda.cmv</groupId>
 	<artifactId>cmv-documentation</artifactId>
-	<version>1.1.0-SNAPSHOT</version>
+	<version>1.1.0</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>8</java.version>
@@ -15,7 +13,7 @@
 		<dependency>
 			<groupId>eu.cessda.cmv</groupId>
 			<artifactId>cmv-core</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
+			<version>1.1.0</version>
 			<classifier>javadoc</classifier>
 		</dependency>
 	</dependencies>
@@ -154,7 +152,8 @@
 	<scm>
 		<url>https://github.com/cessda/cessda.cmv.documentation</url>
 		<developerConnection>scm:git:https://github.com/cessda/cessda.cmv.documentation.git</developerConnection>
-	</scm>
+	  <tag>1.1.0</tag>
+  </scm>
 	<ciManagement>
 		<system>Jenkins</system>
 		<url>https://jenkins.cessda.eu/</url>
